--- a/과제/1주차.md
+++ b/과제/1주차.md
@@ -50,6 +50,48 @@
 
 ## Thread and shared resources
 
-- thread와 공용객체
-- Gradle이 무엇인가? Maven이 무엇인가? 빌드도구
-- Maven CoC란?
+수업을 안들어서 어떤걸 알아봐야할지모르겠다...
+아마도 웹서블릿은 리퀘스트가 하나 들어올 때 마다 하나의 새로운 쓰레드가 생성되서 요청에 대한 응답 까지 쭉 처리 하기 때문에 공용으로 어떤걸 지속적으로 사용하려면 thread-safe하게 코드를 작성해야한다 이런 내용이 나와야하지 않을까
+
+> 관련해서 잘 정리해 놓은 블로그 참고 [링크](http://tutorials.jenkov.com/java-concurrency/index.html) (매우 김 주의!)
+
+---
+
+## 빌드도구
+
+Java에 대표적인 빌드 자동화 도구에는 Gradle과 Maven이 있다.
+
+>### Gradle
+>
+>- 빌드 스크립트는 Groovy 또는 Kotlin DSL을 사용한다
+>- 여러 프로젝트를 동시에 빌드하는 것을 지원하도록 디자인 되었다
+>- 그래서 실제 변경이된 프로젝트를 캐치해서 해당 프로젝트만 빌드하기 때문에 이 경우 Maven보다 빌드 속도가 빠르다
+>- 사실 빌드 타임 비교해보면 gradle의 빌드 캐싱을 켜두면 Maven에 비해 월등히 빠르다
+>- 자바 말고도 다른 언어에 대한 빌드도 지원한다. 대표적으로 Android도 있다 (이건 언어가 아니잖어...)
+
+>### Maven
+>
+>- 오래된 만큼 여러 IDE와의 호환성 등이 좋다
+>- 물론 다른 언어 빌드를 지원하지만 대부분 자바 빌드를 위해 사용한다
+
+[속도 비교 관련 자료](http://bkim.tistory.com/13)
+
+---
+
+## Maven CoC란?
+
+*Convention over configuration*
+
+관습적으로 사용되어지는 수많은 설정들을 default값으로 제공해서 개발자들로 하여금 프로젝트 설정에 들이는 시간과 노력을 줄여주고, 또한 설정을 공통적으로 사용함으로서 유연성과 단순성을 잃어버리지 않도록 하기 위한 소프트웨어 디자인 패러다임
+
+CoC가 적용된 maven은 설정값을 변경하지 않는다면,
+
+소스코드는 ${basedir}/src/main/java 에  
+리소스들은 ${basedir}/src/main/resource 에  
+테스트코드들은 ${basedir}/src/test 에  
+프로젝트 파일은 ${basedir}/target 에  
+JAR 파일로 제공된다  
+
+Maven의 강점은 CoC를 거의 강요하는데서 온다. 기본 설정을 변경하지 않는 한 메이븐은 개발자에게 설정에 필요한 노력을 거의 요구하지 않는다.
+
+> [출처](https://eminentstar.github.io/2017/07/07/about-maven.html)
